--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -49,7 +49,7 @@
 <header class="site-header px-3 d-flex flex-row justify-content-between align-items-center position-fixed w-100 mt-2">
   <div class="d-flex align-items-center">
     <span>
-      <img src="{% static 'users/images/accounts.png' %}" alt="accounts" class="accounts hover-pointer" />
+      <img src="{% static 'users/images/accounts.png' %}" alt="accounts" class="accounts hover-pointer" title="account" />
       <div class="accounts-list position-absolute bg-body-tertiary border rounded-1 shadow-sm">
         <div class="d-flex flex-column">
           {% for account in request.user.account_set.all %}
