--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -1,20 +1,44 @@
 {% extends 'users/base.html' %}
 {% load static %}
+{% load accounts_tags %}
 {% block content %}
   {% include 'users/includes/header.html' %}
   <main class="float-end">
     <div>
       {% if request.user.account_set.all %}
-        <h1>Welcome, {{ request.user.get_full_name }}</h1>
-        <p>Account Number: {{ user.account_number }}</p>
-        <p>Balance: ${{ user.balance }}</p>
-
-        <h2>Recent Transactions:</h2>
-        <ul>
-          {% for transaction in recent_transactions %}
-            <li>{{ transaction.partner }} - {{ transaction.transaction_type }} - ${{ transaction.amount }}</li>
-          {% endfor %}
-        </ul>
+        <div>
+          <span>
+            <div>
+              <p class="text-success">
+                Welcome!, <span class="fs-3 fw-bold">{{ request.user.get_full_name }}</span>
+              </p>
+              <p class="fw-semibold fs-1">{{ request.session.account.currency|currency_to_unicode|safe }}{{ request.session.account.balance }}</p>
+              <p class="fw-semibold">
+                Account Number: <span class="fs-4">{{ request.session.account.number }}</span>
+              </p>
+              <div class="d-flex justify-space-between">
+                <span id="quick-transfer" class="border border-success rounded-2">Quick Transfer</span>
+                <span id="quick-deposit">Quick Deposit</span>
+              </div>
+            </div>
+            <div>
+              <h2>Recent Transactions:</h2>
+              <ul>
+                {% for transaction in recent_transactions %}
+                  <li>{{ transaction.partner }} - {{ transaction.transaction_type }} - ${{ transaction.amount }}</li>
+                {% endfor %}
+              </ul>
+            </div>
+          </span>
+          <span>
+            <div></div>
+            <div></div>
+          </span>
+        </div>
+        <div>
+          <div></div>
+          <div></div>
+        </div>
       {% else %}
         <p class="text-success">
           Welcome!, <span class="fs-3 fw-bold">{{ request.user.get_full_name }}</span>
