--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -97,7 +97,7 @@
         </div> <!-- unread notification count -->
       </span>
       <span class="position-relative unread-notifications">
-        <span class="position-absolute bg-white shadow-lg p-3">
+        <span class="position-absolute bg-white shadow-lg p-3 rounded-2">
           {% for note in unread_note %}
           <div
             class="unread-notification mb-2 pb-2">
