--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -9,8 +9,8 @@
         <div class="dashboard">
           <div>
             <div class="quick-transaction">
-              <span class="transfer rounded-1 p-2 fw-semibold">Quick Transfer</span>
-              <span class="deposit rounded-1 p-2 fw-semibold">Quick deposit</span>
+              <button class="transfer rounded-1 p-2 fw-semibold">Quick Transfer</button>
+              <button class="deposit rounded-1 p-2 fw-semibold">Quick deposit</button>
             </div>
             <div class="account-cards"></div>
             <div class="transaction-chart"></div>
