--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -56,6 +56,14 @@
     <link rel="stylesheet" href="{% static 'users/styles/background.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/body.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/footer.css' %}" />
+
+    <!-- load font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+
+    <!-- load chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
       {% block content %}
